--- a/README.org
+++ b/README.org
@@ -68,15 +68,19 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
    [[file:doc/parameter_help2.png]]
 
 ** Pin-pointing the relevant ANSYS documentation
-   Without the detour of searching in the ANSYS Help Viewer or in the
-   online help you can directly trigger the relevant manual entry from
-   your APDL session.  This works for APDL commands, element names and
-   other manual topics.  The help topics are shown in a web browser.
-   (To that end you must have installed the local ANSYS documentation
-   and configured APDL-Mode.)
+   You can directly trigger (with *C-c C-b*) the relevant manual entry
+   from your APDL session without the detour of searching in the ANSYS
+   Help Viewer or waiting for the ANSYS online help.  This works not
+   only for APDL commands but element names and other manual topics.
+   Help topics are shown in a web browser.  (To that end you must have
+   installed the local ANSYS documentation and configured APDL-Mode.)
 
-   #+caption: Browsing the manual in a web browser (here with EWW in GNU-Emacs).
-   [[file:doc/browse_manual.png][file:d:/apdl-mode/doc/browse_manual.png]]
+   The image below is showing a manual entry in GNU-Emacs's EWW
+   browser. You are able to consult the manual side-by-side with your
+   APDL code.
+
+   # #+caption: Browsing the manual in a web browser (here with EWW in GNU-Emacs).
+   [[file:doc/browse_manual.png]]
 
 ** Code outlining for inspecting WorkBench solver (.dat) files
    APDL-Mode hides the normally uninteresting but usually very large
