--- a/README.org
+++ b/README.org
@@ -56,9 +56,8 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
   `Command Snippets' enhance the GUIs' modelling capabilities.
 * Some highlights
   Nowadays I find APDL-Mode mostly useful in writing these `Command
-  Snippets' or inspecting snippets from colleagues.  For in-depth
-  investigations APDL-Mode is very convenient to study the solver
-  (.dat) files.
+  Snippets' or reading snippets from colleagues.  Or for studying
+  solver (.dat) files which are created by WorkBench.
 ** In-built APDL command help with argument counter
    Especially for commands with a large number of arguments it is
    cumbersome to count the arguments, *C-?* facilitates this for you
@@ -68,12 +67,13 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
    [[file:doc/parameter_help2.png]]
 
 ** Pin-pointing the relevant ANSYS documentation
-   You can directly trigger (with *C-c C-b*) the relevant manual entry
-   from your APDL session without the detour of searching in the ANSYS
-   Help Viewer or waiting for the ANSYS online help.  This works not
-   only for APDL commands but element names and other manual topics.
-   Help topics are shown in a web browser.  (To that end you must have
-   installed the local ANSYS documentation and configured APDL-Mode.)
+   You can trigger (*C-c C-b*) the relevant manual entry directly from
+   your APDL session without the detour of searching in the ANSYS Help
+   Viewer or waiting for the ANSYS online help.  This works not only
+   for APDL commands but also element names and other manual
+   topics. (To that end you must have installed the local ANSYS
+   documentation and configured APDL-Mode.)  The topics are shown in a
+   web browser.
 
    The image below is showing a manual entry in GNU-Emacs's EWW
    browser. You are able to consult the manual side-by-side with your
@@ -96,30 +96,37 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
    APDL-Mode menu field
 
    [[file:doc/ansys-mode.jpg]]
-* Requirements and installation
+* Installation
 #  - APDL-Mode is now available on MELPA
 #  For further installation options
-   Please have a look in the [[file:INSTALLATION.org][INSTALLATION]] file.
+
+1) Install [[https://www.gnu.org/software/emacs/][GNU-Emacs]] (if you are new to Emacs please check the
+   tutorial in the `Help' menu).
+2) Install the APDL-Mode package (You need at least Emacs-25.1.)
+   # melpa, add the following in your GNU-Emacs init file:
+   # (add-to-list 'package-archives
+   # 	     '("melpa" . "http://melpa.org/packages/") t)
+   # Then do M-x package-list-packages, find apdl-mode and install it.
+
+   For further installation options please have a
+   look in the [[file:INSTALLATION.org][INSTALLATION]] file.
 * Usage
+  Please type `M-x apdl' then you are in an APDL-Mode buffer and you
+  can check the menu bar's `APDL' or `ANSYS' entries.  Please select
+  `Describe APDL-Mode' or type `C-h m', which will display the
+  APDL-Mode help with further guidance.
 
-  Please type `M-x apdl <RET>' then you are able to check the menu
-  bar's `APDL' or `ANSYS' entries.  Please select `Describe APDL-Mode'
-  or type "C-h m" (i. e. the <CTRL> key together with the `h' key and
-  subsequently the `m' key), which will display the APDL-Mode help
-  which is your `quick guide.
-
-  I suggest you have a look into the Emacs tutorial and the
-  introductory APDL-Mode tutorial ([[file:doc/A-M_introductory_tutorial.org][A-M_introductory_tutorial.org]]) as
-  well.
+  You might check the introductory APDL-Mode tutorial
+  ([[file:doc/A-M_introductory_tutorial.org][A-M_introductory_tutorial.org]]) for an overview as well.
 
 * Configuration and Customisation
-  Please read the file [[file:apdl-config.org][apdl-config.org]], for your convenience APDL-Mode
-  provides also an customisation example [[file:ansys-config.el][apdl-config.el]].
+  Please read the file [[file:apdl-config.org][apdl-config.org]] and adjust the customisation
+  example [[file:ansys-config.el][apdl-config.el]].
 * News
   Please have a look in the [[file:NEWS.org][NEWS]] file
-* License and Acknowledgements
+* License
   - GPL 3 - see the [[file:LICENSE.org][LICENSE]] file
-
+* Acknowledgements
   Acknowledgements to Tim Read and Geoff Foster for their ansys-mod.el
   from 1997 which triggered the idea in 2006 to start apdl-mode.
 
@@ -131,7 +138,6 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
 * Further Resources
 ** APDL-Mode
    - The complete [[http://dieter-wilhelm.github.io/apdl-mode][documentation of APDL-Mode]] is available online
-   - The [[https://github.com/dieter-wilhelm/apdl-mode][GitHub page of APDL-Mode]]
 ** APDL Editor Resources
    - A free Windows [[http://apdl.de][APDL editor]], site not maintained since 2011
    - A commercial competitor of apdl-mode: The [[http://www.padtinc.com/pedal][Pedal]] script editor for
