--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-02-15>
+#+DATE: Time-stamp: <2020-02-16>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -15,12 +15,19 @@
 
 #+STARTUP: showall
 * 20.1.0
-   - Build package with makefile and add installation recipe, update
-     INSTALLATION.org and do a 20.1.0 release
-** bugs
 
-   - C-c C-b no warning, when -help-path is not initialised!!!
-   - M-? with too many commas throws an error, is message  good enough?
+  Update the configuration section, the autoload entries are obselete
+  with package.el.
+
+  -initialise <= apdl-ansys-install-directory!?  There are 2
+   definitions!  => branch
+
+
+  Delete unnecessary remote branches
+
+** bugs
+   - M-? with too many commas throws an error, is the error message
+     good enough?
    - The APDL menu entry in the terminal is not working => wrong type
      argument!
    - check highlighting of -license-type
@@ -28,15 +35,15 @@
    - The ANSYS menu enty is not working under Win10??
    - apdl command in sandbox not working <= autoload not working?, done
 ** wishes
-   - Remove unnecessary tags from Github
-   - Check customisation system
+   - are the material properties documented, matlib?
+   - Check the customisation system
    - online documentation: still ANSYS-mode!
    - Trigger the ANSYS online manual, if there's no local docu for C-c C-b
+
 ** misc
    - bug-report about package.el "NAME-readme.txt", done
    - package-lint
      - problems with prefix names and default key bindings...
-   - are the material properties documented?
    - how about the work branch?
    - what is default.el <=> apdl-config.el?, dito. a-m.el!?
    - README (for package-el) README.org for github
